[package]
name = "D2RAL"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
lto = "thin"

[dependencies]
hudhook = { path = "vendor/hudhook" }
tui = "0.19"
crossterm = "0.25"
colored = "*"
regex = "1"
wildmatch = "2.1.1"
runas = { git = "https://github.com/mitsuhiko/rust-runas", branch = "master"}
serde = { version = "1", features = ["derive"] }


windows = { version = "0.43.0", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_System_Diagnostics_ToolHelp"]}
wincredentials-bindings = { path = "bindings", version = "0.1.0" }
widestring = "1.0.2"
clap = { version = "*", features = ["derive"] }