[package]
name = "d2ral"
version = "0.84.3"
edition = "2021"
authors = ["t3ohm <m6973666974@gmail.com>"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
lto = "thin"

[dependencies]
zip = "0.6.3"
reqwest = { version = "0.11.13"}
tokio = { version = "1.22", features = ["full"] }
platforms = "*"
chrono = "*"
log = "*"
# tui = "0.19"
# crossterm = "0.25"
colored = "*"
regex = "1"
wildmatch = "2.1.1"
runas = { git = "https://github.com/mitsuhiko/rust-runas", branch = "master"}
serde = { version = "1", features = ["derive"] }

# windows = { version = "0.43.0", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_System_Diagnostics_ToolHelp"]}
wincredentials-bindings = { path = "bindings", version = "0.1.0" }
widestring = "1.0.2"
clap = { version = "*", features = ["derive"] }
windows = { version = "0.43.0", features = [
  "Win32_Devices_HumanInterfaceDevice",
  "Win32_System_Diagnostics_ToolHelp",
  "Win32_Foundation",
  "Win32_Security",
  "Win32_System_Console",
  "Win32_System_Diagnostics_Debug",
  "Win32_System_LibraryLoader",
  "Win32_System_Memory",
  "Win32_System_ProcessStatus",
  "Win32_System_SystemServices",
  "Win32_System_Threading",
  "Win32_System_WindowsProgramming",
  "Win32_Graphics_Dxgi",
  "Win32_Graphics_Dxgi_Common",
  "Win32_Graphics_Direct3D9",
  "Win32_Graphics_Direct3D11",
  "Win32_Graphics_Direct3D12",
  "Win32_Graphics_Direct3D_Fxc",
  "Win32_Graphics_Direct3D",
  "Win32_Graphics_Gdi",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging",
] }
winit = "0.27"